# Linkage

./: .gitignore  AboutDialog.cpp  Adjuster.cpp  Adjuster.h  AngleDialog.cpp  AngleDialog.h  AviFile.cpp  Base64.cpp  Base64.h  CMakeLists.txt  ConnectorPropertiesDialog.cpp  ConnectorPropertiesDialog.h  ControlKnob.cpp  ControlKnob.h  ControlWindow.cpp  DXFFile.cpp  DebugItem.h  Element.cpp  Element.h  GearRatioDialog.cpp  LengthDistanceDialog.cpp  LengthDistanceDialog.h  LinePropertiesDialog.cpp  LinePropertiesDialog.h  LinkPropertiesDialog.cpp  LinkPropertiesDialog.h  Linkage.docx  LocationDialog.cpp  LocationDialog.h  MainFrm.cpp  MainFrm.h  MyCheckListBox.cpp  MyCheckListBox.h  MyDialog.cpp  MyDialog.h  MyMFCRibbonApplicationButton.cpp  MyMFCRibbonApplicationButton.h  MyMFCRibbonBar.cpp  MyMFCRibbonBar.h  MyMFCRibbonCategory.cpp  (+53 more)
Linkage.old0/PackageFiles/: AppxManifest.xml  resources.scale-150.pri
Linkage.old0/PackageFiles/VFS/Common AppData/Microsoft/Windows/AppRepository/: StateRepository-Machine.srd  StateRepository-Machine.srd-shm  StateRepository-Machine.srd-wal
Linkage.old0/PackageFiles/VFS/Windows/INF/: BasicRender.PNF  ChargeArbitration.PNF  SensorsHidClassDriver.PNF  acpi.PNF  acpipagr.PNF  audioendpoint.PNF  bth.PNF  bthleenum.PNF  bthpan.PNF  c_firmware.PNF  c_swdevice.PNF  compositebus.PNF  cpu.PNF  disk.PNF  hal.PNF  halextintclpiodma.PNF  hdaudbus.PNF  ialpssi_i2c.PNF  input.PNF  keyboard.PNF  machine.PNF  monitor.PNF  msgpiowin32.PNF  mssmbios.PNF  ndisvirtualbus.PNF  netavpna.PNF  netrasa.PNF  netsstpa.PNF  netvwifimp.PNF  pci.PNF  printqueue.PNF  rdpbus.PNF  spaceport.PNF  swenum.PNF  tdibth.PNF  tpm.PNF  tsusbhub.PNF  uefi.PNF  umbus.PNF  usb.PNF  (+10 more)
Linkage.old0/PackageFiles/VFS/Windows/Prefetch/: AgAppLaunch.db  AgGlFgAppHistory.db  AgGlGlobalHistory.db  AgRobust.db  DLLHOST.EXE-BBB8B3DE.pf  INSTALLAGENT.EXE-6A6745B1.pf  ResPriStaticDb.ebd  SMARTSCREEN.EXE-4BF07096.pf
Linkage.old0/PackageFiles/VFS/Windows/appcompat/Programs/: Amcache.hve
Linkage/PackageFiles/: AppxManifest.xml  resources.pri  resources.scale-100.pri  resources.scale-125.pri  resources.scale-200.pri
Linkage/PackageFiles/VFS/Common AppData/Microsoft/Windows/AppRepository/: StateRepository-Machine.srd-shm  StateRepository-Machine.srd-wal
Linkage/PackageFiles/VFS/Windows/INF/: BasicRender.PNF  ChargeArbitration.PNF  SensorsHidClassDriver.PNF  acpi.PNF  acpipagr.PNF  audioendpoint.PNF  basicdisplay.PNF  bth.PNF  bthleenum.PNF  bthpan.PNF  c_firmware.PNF  c_swdevice.PNF  cmbatt.PNF  compositebus.PNF  cpu.PNF  disk.PNF  hal.PNF  halextintclpiodma.PNF  hdaudbus.PNF  ialpssi_i2c.PNF  input.PNF  keyboard.PNF  ksfilter.PNF  machine.PNF  monitor.PNF  msgpiowin32.PNF  mssmbios.PNF  ndisvirtualbus.PNF  netavpna.PNF  netrasa.PNF  netsstpa.PNF  netvwifimp.PNF  pci.PNF  printqueue.PNF  rdpbus.PNF  spaceport.PNF  swenum.PNF  tdibth.PNF  tpm.PNF  tsusbhub.PNF  (+12 more)
Linkage/PackageFiles/VFS/Windows/Panther/UnattendGC/: diagwrn.xml
Linkage/PackageFiles/VFS/Windows/Prefetch/: AgAppLaunch.db  AgGlFaultHistory.db  AgRobust.db  DLLHOST.EXE-71214090.pf  PfPre_2e26d08c.mkd  RUNTIMEBROKER.EXE-A02FF048.pf  SEARCHUI.EXE-1EA5380E.pf  SHELLEXPERIENCEHOST.EXE-B96BF85D.pf  TASKHOSTW.EXE-4DB99E1B.pf
Linkage/PackageFiles/VFS/Windows/appcompat/Programs/: Amcache.hve
WixSetup/: Product.wxs  WixSetup.wixproj
enc_temp_folder/471a51e9ca7f7daacde1e0f15fe47d35/: link.cpp
enc_temp_folder/e0263484895e7e9b6d025636b357b38/: link.cpp
res/: linkage64.xml  ribbon1.mfcribbon-ms
